<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> My reader</string>
    <string name="app_version" translatable="false"> 1.6</string>
    <string name="app_web_site">www.liodevel.com</string>
    <string name="app_desc"> Read your news with My Reader. Easy, fast and beauty. Save your favourite articles to read later (offline)</string>

    <string name="navigation_drawer_open">Open categories</string>
    <string name="navigation_drawer_close">Close categories</string>
    <string name="action_example">Update</string>
    <string name="action_settings">Settings</string>
    <string name="manage_feeds">Add RSS</string>
    <string name="feeds_browser">Categories</string>
    <string name="clear_news">Clear News</string>
    <string name="title_activity_noticia">New</string>
    <string name="title_activity_manage_feeds">My Feeds</string>
    <string name="title_activity_new_feed">New Feed</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_section1">Art</string>
    <string name="title_section2">Books</string>
    <string name="title_section3">Business</string>
    <string name="title_section4">Cars</string>
    <string name="title_section5">Design</string>
    <string name="title_section6">Fame</string>
    <string name="title_section7">Food</string>
    <string name="title_section8">Funny</string>
    <string name="title_section9">Gaming</string>
    <string name="title_section10">Histories</string>
    <string name="title_section11">Internet</string>
    <string name="title_section12">Music</string>
    <string name="title_section13">News</string>
    <string name="title_section14">Photo</string>
    <string name="title_section15">Politics</string>
    <string name="title_section16">Science</string>
    <string name="title_section17">Sports</string>
    <string name="title_section18">Style</string>
    <string name="title_section19">TV and Movies</string>
    <string name="title_section20">Technology</string>
    <string name="title_section21">Spain</string>

    <string name="no_news">No news...\nSlide down to update</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="open">OPEN</string>
    <string name="save">SAVE</string>
    <string name="add">Add</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="accept">Accept</string>
    <string name="no_feeds_config">No RSS added!</string>
    <string name="browse_categories">Browse categories</string>
    <string name="last_update">Last update: </string>
    <string name="add_feeds">Add my Feeds</string>

    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="previous_new">Previous new</string>
    <string name="next_new">Next new</string>

    <string name="pref_header_general">General</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_saved_news">Saved news</string>

    <string name="pref_delete_readed">Delete read news</string>
    <string name="pref_description_delete_readed">The read news will be deleted</string>

    <string name="pref_feeds">Feeds</string>
    <string name="pref_description_feeds">Add the RSS feeds to download</string>
    <string name="pref_update_start">Sync when start</string>
    <string name="pref_description_update_start">Sync news when App starts</string>

    <string name="saved_news">Saved news</string>
    <string name="news">News</string>
    <string name="article_saved">Article saved</string>


</resources>
