<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

       <item
        android:id="@+id/action_saved_news"
        android:title="@string/saved_news"
        android:showAsAction="withText|ifRoom"/>

    <item
        android:id="@+id/action_update"
        android:title="@string/action_example"
        android:showAsAction="withText|ifRoom"
        android:icon="@drawable/ic_action_refresh" />

    <item
        android:id="@+id/clear_news"
        android:title="@string/clear_news"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/manage_feeds"
        android:title="@string/manage_feeds"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/add_feeds"
        android:title="@string/feeds_browser"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="100"
        android:showAsAction="never" />


</menu>
