<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffdcdcdc"
    >

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ListView
            android:id="@+id/lista_noticias_1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="#ffdcdcdc"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/last_update" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/no_news"
            android:id="@+id/text_no_news"
            android:layout_gravity="top"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_no_feeds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/no_feeds_config"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/text_no_news"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/button_browse_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/browse_categories"
            android:gravity="center"
            android:padding="16dp"
            android:textSize="22sp"
            android:textColor="#ffdcdcdc"
            android:background="#ff6b788e"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/button_add_feeds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/add_feeds"
            android:gravity="center"
            android:padding="16dp"
            android:textSize="22sp"
            android:textColor="#ffdcdcdc"
            android:background="#ff6b788e"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:layout_below="@+id/button_browse_categories"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/last_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_update"
            android:gravity="left"
            android:padding="6dp"
            android:textSize="12sp"
            android:textColor="#ffdcdcdc"
            android:background="#ff387742"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
